    &#8226; Mention retweeter when replying<br/>
    &#8226; Fixes for live streaming sometimes setting up multiple listeners causing duplicates<br/>
    &#8226; Open play store links to the play store<br/>
    &#8226; Clicking a "Saved Image" notification will take you to that image in the gallery<br/>
    &#8226; Play store crash fixes<br/>
    &#8226; Simple style changes to extra page setup<br/>
    &#8226; Random small reported bug fixes<br/>
    &#8226; Updated more translations<br/>
</br><br/>

<b>Version 1.4.3:</b><br/><br/>
    &#8226; Attempted fixes for TweetMarker<br/>
    &#8226; Translation updates<br/>
    &#8226; Crash fixes<br/>
</br><br/>

<b>Version 1.4.2:</b><br/><br/>
    &#8226; Fixes for Talon Pull with multiple accounts<br/>
    &#8226; Fixed duplicate tweets<br/>
    &#8226; Way better support for sharing and uploading images<br/>
    &#8226; Open statuses from a web link in talon<br/>
</br><br/>

<b>Version 1.4.1:</b><br/><br/>
    &#8226; Major speed improvements when viewing tweets, profiles, searches, lists, and other networked tasks<br/>
    &#8226; Automatically load more search results, profile tweets, followers, and more at the bottom of the pages<br/>
    &#8226; View replies to retweets<br/>
    &#8226; Fade in animation for pictures<br/>
    &#8226; Fix for sharing from gallery<br/>
    &#8226; Support for Samsung Multi-window<br/>
    &#8226; Many more crash fixes<br/>
</br><br/>

<b>Version 1.4.0:</b><br/><br/>
    &#8226; Customize the two pages on the left of the main timeline<br/>
    &#8226; Long click to remove favorite users<br/>
    &#8226; Progress bar for in-app browser<br/>
    &#8226; Better calculation of tweet lengths<br/>
    &#8226; MUCH refresh times again<br/>
    &#8226; More stability fixes<br/>
    &#8226; Better memory management again<br/>
    &#8226; Download the Portal app for themes and news from "Theme Settings"<br/>
</br><br/>

<b>Version 1.3.4:</b><br/><br/>